# py-sonic-pi

./: .gitignore  Makefile  README.md  output.rb  pyproject.toml  requirements.txt  test.py
.agents/skills/lint/: SKILL.md
.github/workflows/: ci.yml
py_sonic_pi/: effects.py  inventory.py  patterns.py  synths.py  transformer.py
py_sonic_pi/templates/: control_block.template.rb  metronomes.template.rb  processing_block.template.rb  project.template.rb  sample_pattern_events.template.rb  source_block.template.rb  synth_pattern_events.template.rb  track_source.template.rb
tests/: pattern_generation_from_matter_test.py
