[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-sonic-pi"
version = "0.1.0"
description = "Python wrapper for Sonic Pi"
requires-python = ">=3.8"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["py_sonic_pi*"]
